Moved the old homepage styles to temp.scss

--- a/index.html
+++ b/index.html
@@ -1,1 +1,78 @@
-<!DOCTYPE html><html lang="en"><head><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" /><title>UGUI: A Universal GUI for CLI Applications</title><meta charset="UTF-8"/><meta name="description" content="UGUI gives a face to the command line, and that face is HTML, CSS, and JavaScript" /><meta name="keywords" content="UGUI, Universal GUI, Universal Graphical User Interface, Command Line Interface, framework, nw.js, CLI, terminal, command prompt, dos prompt, node-webkit, nwjs, desktop application, web technology, easy, fast, development, dev tools, cross-platform" /><meta http-equiv="Expires" content="0"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/><meta name="subject" content="Software Development"/><meta name="copyright" content="Jared Wilcurt"/><meta name="language" content="EN"/><meta name="robots" content="index,follow"/><meta name="rating" content="General"/><meta name="HandheldFriendly" content="True"/><meta http-equiv="cleartype" content="on"/><meta name="application-name" content="UGUI"/><meta name="msapplication-navbutton-color" content="#FFFFFF"/><meta name="msapplication-TileColor" content="#FFFFFF"/><meta name="msapplication-square70x70logo" content="_img/meta/mstile01sm.png"/><meta name="msapplication-square150x150logo" content="_img/meta/mstile02md.png"/><meta name="msapplication-wide310x150logo" content="_img/meta/mstile03wd.png"/><meta name="msapplication-square310x310logo" content="_img/meta/mstile04lg.png"/><meta name="apple-mobile-web-app-title" content="UGUI"/><meta name="apple-mobile-web-app-capable" content="no"/><meta name="apple-touch-fullscreen" content="no"/><meta name="apple-mobile-web-app-status-bar-style" content="black"/><link rel="apple-touch-icon" href="_img/meta/apl-57.png" type="image/png" sizes="57x57"/><link rel="apple-touch-icon-precomposed" href="_img/meta/apl-57.png" type="image/png" sizes="57x57"/><link rel="apple-touch-icon" href="_img/meta/apl-72.png" type="image/png" sizes="72x72"/><link rel="apple-touch-icon-precomposed" href="_img/meta/apl-72.png" type="image/png" sizes="72x72"/><link rel="apple-touch-icon" href="_img/meta/apl-114.png" type="image/png" sizes="114x114"/><link rel="apple-touch-icon-precomposed" href="_img/meta/apl-114.png" type="image/png" sizes="114x114"/><link rel="apple-touch-icon" href="_img/meta/apl-144.png" type="image/png" sizes="144x144"/><link rel="apple-touch-icon-precomposed" href="_img/meta/apl-144.png" type="image/png" sizes="144x144"/><link rel="apple-touch-startup-image" href="_img/meta/apl-str.png" type="image/png"/><link rel="fluid-icon" href="_img/meta/fluid.png" type="image/png"/><link rel="icon" href="favicon.ico" type="image/x-icon"/><link rel="shortcut icon" href="favicon.ico" type="image/ico"/><link rel="stylesheet" href="_style/style.css" type="text/css"/><script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.3.min.js"></script><script>window.jQuery||document.write('<script src="_scripts/jquery-2.1.3.min.js"><\/script>'),$(document).ready(function(){$.get("https://api.github.com/repos/UniversalGUI/UGUI/releases",function(t){for(var r=0;r<t.length;r++){var e=t[r].assets[0],n=1024,a=100;if(e)return $(".b").attr("href",e.browser_download_url).attr("title",e.name+" ("+Math.round(e.size/n/n*a)/a+" MB)"),void $(".v").html(t[r].tag_name)}}),$.get("/_markup/nav.html",function(t){$("body").prepend(t)})});</script></head><body class="d"><table class="t"><tr><td><a href="http://github.com/UniversalGUI/UGUI"><img src="_img/logo.png" alt="UGUI Logo" /></a><h3>Universal Graphical User Interface</h3><p>UGUI gives a face to command line applications using HTML, CSS, &amp; JavaScript.</p><p>This site is <strong>under construction</strong>, but you can checkout the <a href="http://github.com/UniversalGUI/UGUI">UGUI project on Github</a></p><p>or be an early member to our new <a href="http://reddit.com/r/UGUI">community forum</a> on Reddit.</p><a href="https://github.com/UniversalGUI/UGUI/releases" class="b"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 32 32"><path d="M21.354 7.26v9.501h6.646l-11.783 14.213-11.783-14.213h6.646v-9.501zM11.08 1.208h10.275v4.222h-10.275z"/></svg>Download UGUI <span class="v">v1.0.0</span></a><p>Watch <a href="tutorials/getting-started.htm">"Getting Started with UGUI"</a>.</p></td></tr></table><a href="http://github.com/UniversalGUI/UGUI" class="github-corner"><svg width="80" height="80" viewBox="0 0 250 250" style="position:absolute;top:0;border:0;right:0" fill="#911146" color="#ED8C2B"><path d="M0 0l115 115h15l12 27 108 108v-250z"/><path d="M128.3 109c-14.5-9.3-9.3-19.4-9.3-19.4 3-6.9 1.5-11 1.5-11-1.3-6.6 2.9-2.3 2.9-2.3 3.9 4.6 2.1 11 2.1 11-2.6 10.3 5.1 14.6 8.9 15.9" fill="#ED8C2B" style="transform-origin:130px 106px" class="octo-arm"/><path d="M115 115c-.1.1 3.7 1.5 4.8.4l13.9-13.8c3.2-2.4 6.2-3.2 8.5-3-8.4-10.6-14.7-24.2 1.6-40.6 4.7-4.6 10.2-6.8 15.9-7 .6-1.6 3.5-7.4 11.7-10.9 0 0 4.7 2.4 7.4 16.1 4.3 2.4 8.4 5.6 12.1 9.2 3.6 3.6 6.8 7.8 9.2 12.2 13.7 2.6 16.2 7.3 16.2 7.3-3.6 8.2-9.4 11.1-10.9 11.7-.3 5.8-2.4 11.2-7.1 15.9-16.4 16.4-30 10-40.6 1.6.2 2.8-1 6.8-5 10.8l-11.7 11.6c-1.2 1.2.6 5.4.8 5.3z" fill="#ED8C2B" class="octo-body"/></svg></a><script>!function(U,g,u,i,j,s){U.GoogleAnalyticsObject=u;U[u]||(U[u]=function(){(U[u].q=U[u].q||[]).push(arguments)});U[u].u=+new Date;j=g.createElement(i);s=g.getElementsByTagName(i)[0];j.src='//www.google-analytics.com/analytics.js';s.parentNode.insertBefore(j,s)}(window,document,'ga','script');ga('create','UA-67786036-1','auto');ga('send','pageview');</script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <title>UGUI: A Universal GUI for CLI Applications</title>
+    <meta charset="UTF-8"/>
+    <meta name="description" content="UGUI gives a face to the command line, and that face is HTML, CSS, and JavaScript" />
+    <meta name="keywords" content="UGUI, Universal GUI, Universal Graphical User Interface, Command Line Interface, framework, nw.js, CLI, terminal, command prompt, dos prompt, node-webkit, nwjs, desktop application, web technology, easy, fast, development, dev tools, cross-platform" />
+    <meta http-equiv="Expires" content="0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="subject" content="Software Development"/>
+    <meta name="copyright" content="Jared Wilcurt"/>
+    <meta name="language" content="EN"/>
+    <meta name="robots" content="index,follow"/>
+    <meta name="rating" content="General"/>
+    <meta name="HandheldFriendly" content="True"/>
+    <meta http-equiv="cleartype" content="on"/>
+    <meta name="application-name" content="UGUI"/>
+    <meta name="msapplication-navbutton-color" content="#FFFFFF"/>
+    <meta name="msapplication-TileColor" content="#FFFFFF"/>
+    <meta name="msapplication-square70x70logo" content="_img/meta/mstile01sm.png"/>
+    <meta name="msapplication-square150x150logo" content="_img/meta/mstile02md.png"/>
+    <meta name="msapplication-wide310x150logo" content="_img/meta/mstile03wd.png"/>
+    <meta name="msapplication-square310x310logo" content="_img/meta/mstile04lg.png"/>
+    <meta name="apple-mobile-web-app-title" content="UGUI"/>
+    <meta name="apple-mobile-web-app-capable" content="no"/>
+    <meta name="apple-touch-fullscreen" content="no"/>
+    <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+    <link rel="apple-touch-icon" href="_img/meta/apl-57.png" type="image/png" sizes="57x57"/>
+    <link rel="apple-touch-icon-precomposed" href="_img/meta/apl-57.png" type="image/png" sizes="57x57"/>
+    <link rel="apple-touch-icon" href="_img/meta/apl-72.png" type="image/png" sizes="72x72"/>
+    <link rel="apple-touch-icon-precomposed" href="_img/meta/apl-72.png" type="image/png" sizes="72x72"/>
+    <link rel="apple-touch-icon" href="_img/meta/apl-114.png" type="image/png" sizes="114x114"/>
+    <link rel="apple-touch-icon-precomposed" href="_img/meta/apl-114.png" type="image/png" sizes="114x114"/>
+    <link rel="apple-touch-icon" href="_img/meta/apl-144.png" type="image/png" sizes="144x144"/>
+    <link rel="apple-touch-icon-precomposed" href="_img/meta/apl-144.png" type="image/png" sizes="144x144"/>
+    <link rel="apple-touch-startup-image" href="_img/meta/apl-str.png" type="image/png"/>
+    <link rel="fluid-icon" href="_img/meta/fluid.png" type="image/png"/>
+    <link rel="icon" href="favicon.ico" type="image/x-icon"/>
+    <link rel="shortcut icon" href="favicon.ico" type="image/ico"/>
+    <link rel="stylesheet" href="_style/style.css" type="text/css"/>
+    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.3.min.js"></script>
+    <script>
+        window.jQuery||document.write('<script src="_scripts/jquery-2.1.3.min.js"><\/script>'),
+        $(document).ready(function(){
+            $.get("https://api.github.com/repos/UniversalGUI/UGUI/releases",function(t){
+                for(var r=0;r<t.length;r++){
+                    var e=t[r].assets[0],
+                        n=1024,
+                        a=100;
+                    if(e)return $(".b").attr("href",e.browser_download_url).attr("title",e.name+" ("+Math.round(e.size/n/n*a)/a+" MB)"),void $(".v").html(t[r].tag_name)
+                }
+            }),
+            $.get("/_markup/nav.html",function(t){$("body").prepend(t)})
+        });
+    </script>
+</head>
+<body class="dawn">
+    <table class="t">
+        <tr>
+            <td>
+                <a href="http://github.com/UniversalGUI/UGUI"><img src="_img/logo.png" alt="UGUI Logo" /></a>
+                <h3>Universal Graphical User Interface</h3>
+                <p>UGUI gives a face to command line applications using HTML, CSS, &amp; JavaScript.</p>
+                <p>This site is <strong>under construction</strong>, but you can checkout the <a href="http://github.com/UniversalGUI/UGUI">UGUI project on Github</a></p>
+                <p>or be an early member to our new <a href="http://reddit.com/r/UGUI">community forum</a> on Reddit.</p>
+                <a href="https://github.com/UniversalGUI/UGUI/releases" class="b">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 32 32"><path d="M21.354 7.26v9.501h6.646l-11.783 14.213-11.783-14.213h6.646v-9.501zM11.08 1.208h10.275v4.222h-10.275z"/></svg>
+                    Download UGUI <span class="v">v1.0.0</span>
+                </a>
+                <p>Watch <a href="tutorials/getting-started.htm">"Getting Started with UGUI"</a>.</p>
+            </td>
+        </tr>
+    </table>
+    <a href="http://github.com/UniversalGUI/UGUI" class="github-corner"><svg width="80" height="80" viewBox="0 0 250 250" style="position:absolute;top:0;border:0;right:0" fill="#911146" color="#ED8C2B"><path d="M0 0l115 115h15l12 27 108 108v-250z"/><path d="M128.3 109c-14.5-9.3-9.3-19.4-9.3-19.4 3-6.9 1.5-11 1.5-11-1.3-6.6 2.9-2.3 2.9-2.3 3.9 4.6 2.1 11 2.1 11-2.6 10.3 5.1 14.6 8.9 15.9" fill="#ED8C2B" style="transform-origin:130px 106px" class="octo-arm"/><path d="M115 115c-.1.1 3.7 1.5 4.8.4l13.9-13.8c3.2-2.4 6.2-3.2 8.5-3-8.4-10.6-14.7-24.2 1.6-40.6 4.7-4.6 10.2-6.8 15.9-7 .6-1.6 3.5-7.4 11.7-10.9 0 0 4.7 2.4 7.4 16.1 4.3 2.4 8.4 5.6 12.1 9.2 3.6 3.6 6.8 7.8 9.2 12.2 13.7 2.6 16.2 7.3 16.2 7.3-3.6 8.2-9.4 11.1-10.9 11.7-.3 5.8-2.4 11.2-7.1 15.9-16.4 16.4-30 10-40.6 1.6.2 2.8-1 6.8-5 10.8l-11.7 11.6c-1.2 1.2.6 5.4.8 5.3z" fill="#ED8C2B" class="octo-body"/></svg></a>
+    <script>!function(U,g,u,i,j,s){U.GoogleAnalyticsObject=u;U[u]||(U[u]=function(){(U[u].q=U[u].q||[]).push(arguments)});U[u].u=+new Date;j=g.createElement(i);s=g.getElementsByTagName(i)[0];j.src='//www.google-analytics.com/analytics.js';s.parentNode.insertBefore(j,s)}(window,document,'ga','script');ga('create','UA-67786036-1','auto');ga('send','pageview');</script>
+</body>
+</html>
