--- a/index.dev.html
+++ b/index.dev.html
@@ -43,7 +43,7 @@
     <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.3.min.js"></script>
     <script>window.jQuery || document.write('<script src="/_scripts/jquery-2.1.3.min.js"><\/script>');</script>
   </head>
-  <body>
+  <body class="homepage">
     <nav>
         <img src="_img/meta/apl-57.png">
         <a href="#">Home</a>
