--- a/index.dev.html
+++ b/index.dev.html
@@ -47,14 +47,15 @@
   <body class="homepage">
     <nav>
         <img src="_img/meta/apl-57.png">
-        <a href="#">Home</a>
-        <a href="#">Templates</a>
-        <a href="#">Documentation</a>
-        <a href="#">Tutorials</a>
-        <a href="#">Showcase</a>
+        <a href="http://ugui.io/" title="UGUI.io">Home</a>
+<!--    <a href="#">Templates</a> -->
+        <a href="http://ugui.io/api/" title="API Documentation">Documentation</a>
+        <a href="http://ugui.io/tutorials/index.html" title="Getting started with UGUI">Tutorials</a>
+<!--    <a href="#">Showcase</a> -->
+        <a href="http://ugui.io/source" title="The most well commented code in the history of ever!">Annotated Source</a>
         <div class="nav-right">
-            <a href="#" class="start">Get UGUI</a>
-            <a href="#">Fork on GitHub</a>
+            <a href="http://ugui.io/download/" class="start" title="Download Archive">Get UGUI</a>
+            <a href="https://github.com/UniversalGUI/UGUI">Fork on GitHub</a>
         </div>
     </nav>
     <div class="banner">
@@ -94,13 +95,13 @@
                 </div>
             </header>
             <div class="lower-os" id="windows">
-                <img id="win-thumb" src="_img/screenshot/ugui-win-th.png"><img src="_img/screenshot/ugui-win-th.png">
+                <img id="win-thumb" src="_img/screenshot/ugui-win-th.png">
             </div>
             <div class="lower-os" id="osx">
-                <img id="osx-thumb" src="_img/screenshot/ugui-osx-th.png"><img src="_img/screenshot/ugui-osx-th.png">
+                <img id="osx-thumb" src="_img/screenshot/ugui-osx-th.png">
             </div>
             <div class="lower-os" id="linux">
-                <img id="lin-thumb" src="_img/screenshot/ugui-ubuntu-th.png"><img src="_img/screenshot/ugui-ubuntu-th.png">
+                <img id="lin-thumb" src="_img/screenshot/ugui-ubuntu-th.png">
             </div>
         </div>
         <div class="screenshots">
@@ -120,15 +121,16 @@
             </div>
         </div>
         <div class="get-started">
-            <a href="#" class="start">Get Started!</a>
+            <a href="http://ugui.io/download/" class="start">Get Started!</a>
         </div>
         <footer>
-            <a href="#">Home</a>
-            <a href="#">Templates</a>
-            <a href="#">Documentation</a>
-            <a href="#">Tutorials</a>
-            <a href="#">Showcase</a>
-            <a href="#">About</a>
+            <a href="http://ugui.io/">Home</a>
+ <!--       <a href="#">Templates</a> -->
+            <a href="http://ugui.io/api/">Documentation</a>
+            <a href="http://ugui.io/tutorials/index.html">Tutorials</a>
+<!--        <a href="#">Showcase</a> -->
+            <a href="http://ugui.io/source">Annotated Source</a>
+<!--        <a href="#">About</a> -->
             <p>&copy; Copyright Jared Wilcurt 2015</p>
         </footer>
     </div>
