--- a/index.dev.html
+++ b/index.dev.html
@@ -46,8 +46,8 @@
   </head>
   <body class="homepage">
     <nav>
-        <img src="_img/meta/apl-57.png">
-        <a href="http://ugui.io/" title="UGUI.io">Home</a>
+        <img src="_img/meta/apl-57.png" alt="UGUI Icon" />
+        <a href="index.html" title="UGUI.io">Home</a>
 <!--    <a href="#">Templates</a> -->
         <a href="http://ugui.io/api/" title="API Documentation">Documentation</a>
         <a href="http://ugui.io/tutorials/index.html" title="Getting started with UGUI">Tutorials</a>
@@ -58,11 +58,22 @@
             <a href="https://github.com/UniversalGUI/UGUI">Fork on GitHub</a>
         </div>
     </nav>
-    <div class="banner">
-        <img src="_img/logo.png">
+    <section id="jumbotron">
+      <div class="tv">
+        <img src="_img/logo.png" alt="UGUI Logo" />
         <h3>Universal Graphical User Interface</h3>
-         <p>UGUI gives a face to command-line applications using HTML, CSS, &amp; Javascript. This site is <strong>under construction</strong>, but you can check out the <a href="#">UGUI project on Github</a> or be an early member to our new <a href="#">community forum</a> on Reddit. </p>
-    </div>
+        <p>UGUI gives a face to command line applications using HTML, CSS, &amp; JavaScript.</p>
+        <p>This site is <strong>under construction</strong>, but you can checkout the <a href="http://github.com/UniversalGUI/UGUI">UGUI project on Github</a></p>
+        <p>or be an early member to our new <a href="http://reddit.com/r/UGUI">community forum</a> on Reddit.</p>
+
+        <a href="https://github.com/UniversalGUI/UGUI/releases" class="download-btn">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 32 32"><path d="M21.354 7.26v9.501h6.646l-11.783 14.213-11.783-14.213h6.646v-9.501zM11.08 1.208h10.275v4.222h-10.275z"/></svg>
+          Download UGUI <span class="v">v1.0.0</span>
+        </a>
+
+        <p>Watch <a href="tutorials/getting-started.htm">"Getting Started with UGUI"</a>.</p>
+      </div>
+    </section>
     <section id="features">
         <figure>
             <img src="_img/fast.svg">
