Fix up nav links

--- a/index.dev.html
+++ b/index.dev.html
@@ -47,17 +47,18 @@
   <body class="homepage">
     <nav>
         <img src="_img/meta/apl-57.png" alt="UGUI Icon" />
-        <a href="index.html" title="UGUI.io">Home</a>
+        <a href="/index.html" title="UGUI.io">Home</a>
 <!--    <a href="#">Templates</a> -->
-        <a href="http://ugui.io/api/" title="API Documentation">Documentation</a>
-        <a href="http://ugui.io/tutorials/index.html" title="Getting started with UGUI">Tutorials</a>
-<!--    <a href="#">Showcase</a> -->
-        <a href="http://ugui.io/source" title="The most well commented code in the history of ever!">Annotated Source</a>
+        <a href="/api" title="API Documentation">Documentation</a>
+        <a href="/tutorials/index.html" title="Getting started with UGUI">Tutorials</a>
+<!--    <a href="/spotlight" title="Showcase of apps made with UGUI">Showcase</a> -->
+        <a href="/source" title="The most well commented code in the history of ever!">Annotated Source</a>
         <div class="nav-right">
-            <a href="http://ugui.io/download/" class="start" title="Download Archive">Get UGUI</a>
-            <a href="https://github.com/UniversalGUI/UGUI">Fork on GitHub</a>
+            <a href="/download" class="start" title="Download Archive">Get UGUI</a>
+            <a href="http://github.com/UniversalGUI/UGUI" title="View Source Code for UGUI on GitHub">GitHub</a>
         </div>
     </nav>
+
     <section id="jumbotron">
       <div class="tv">
         <img src="_img/logo.png" alt="UGUI Logo" />
@@ -132,15 +133,15 @@
             </div>
         </div>
         <div class="get-started">
-            <a href="http://ugui.io/download/" class="start">Get Started!</a>
+            <a href="tutorials/getting-started.htm" class="start">Get Started!</a>
         </div>
         <footer>
-            <a href="http://ugui.io/">Home</a>
+            <a href="/index.html">Home</a>
  <!--       <a href="#">Templates</a> -->
-            <a href="http://ugui.io/api/">Documentation</a>
-            <a href="http://ugui.io/tutorials/index.html">Tutorials</a>
+            <a href="/api">Documentation</a>
+            <a href="/tutorials/index.html">Tutorials</a>
 <!--        <a href="#">Showcase</a> -->
-            <a href="http://ugui.io/source">Annotated Source</a>
+            <a href="/source">Annotated Source</a>
 <!--        <a href="#">About</a> -->
             <p>&copy; Copyright Jared Wilcurt 2015</p>
         </footer>
