--- a/index.dev.html
+++ b/index.dev.html
@@ -42,6 +42,24 @@
 
     <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.3.min.js"></script>
     <script>window.jQuery || document.write('<script src="/_scripts/jquery-2.1.3.min.js"><\/script>');</script>
+    <script>
+        $(document).ready(function(){
+            $.get("https://api.github.com/repos/UniversalGUI/UGUI/releases", function (data) {
+                for (var i = 0; i < data.length; i++) {
+                    var download = data[i].assets[0];
+
+                    if (download) {
+                      var sizeInMB = Math.round(download.size / 1024 / 1024 * 100) / 100;
+
+                      $(".download-btn").attr("href", download.browser_download_url);
+                      $(".download-btn").attr("title", download.name + " (" + sizeInMB + " MB)");
+                      $(".download-btn .version").html(data[i].tag_name);
+                      return;
+                    }
+                }
+            });
+        });
+    </script>
     <script src="_scripts/crossbrowser.min.js"></script>
   </head>
   <body class="homepage">
@@ -69,7 +87,7 @@
 
         <a href="https://github.com/UniversalGUI/UGUI/releases" class="download-btn">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 32 32"><path d="M21.354 7.26v9.501h6.646l-11.783 14.213-11.783-14.213h6.646v-9.501zM11.08 1.208h10.275v4.222h-10.275z"/></svg>
-          Download UGUI <span class="v">v1.0.0</span>
+          Download UGUI <span class="version">v1.0.0</span>
         </a>
 
         <p>Watch <a href="tutorials/getting-started.htm">"Getting Started with UGUI"</a>.</p>
