Clean up Hero text, move links to footer

--- a/index.dev.html
+++ b/index.dev.html
@@ -82,8 +82,6 @@
         <img src="_img/logo.png" alt="UGUI Logo" />
         <h3>Universal Graphical User Interface</h3>
         <p>UGUI gives a face to command line applications using HTML, CSS, &amp; JavaScript.</p>
-        <p>This site is <strong>under construction</strong>, but you can checkout the <a href="http://github.com/UniversalGUI/UGUI">UGUI project on Github</a></p>
-        <p>or be an early member to our new <a href="http://reddit.com/r/UGUI">community forum</a> on Reddit.</p>
 
         <a href="https://github.com/UniversalGUI/UGUI/releases" class="download-btn">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 32 32"><path d="M21.354 7.26v9.501h6.646l-11.783 14.213-11.783-14.213h6.646v-9.501zM11.08 1.208h10.275v4.222h-10.275z"/></svg>
@@ -156,10 +154,12 @@
         <footer>
             <a href="/index.html">Home</a>
  <!--       <a href="#">Templates</a> -->
-            <a href="/api">Documentation</a>
+            <a href="/api">API Documentation</a>
             <a href="/tutorials/index.html">Tutorials</a>
 <!--        <a href="#">Showcase</a> -->
-            <a href="/source">Annotated Source</a>
+            <a href="/source" title="View the fully commented source code for the UGUI library">Annotated Source</a>
+            <a href="http://reddit.com/r/UGUI" title="Subreddit">Community Forum</a>
+            <a href="http://gitter.im/UniversalGUI/UGUI" title="Gitter">Chatroom</a>
 <!--        <a href="#">About</a> -->
             <p>&copy; Copyright Jared Wilcurt 2015</p>
         </footer>
