--- a/index.html
+++ b/index.html
@@ -135,16 +135,22 @@
         <div class="screenshots">
             <div>
                 <h2>Screenshots</h2>
-                <img class="win-screenshot-lg"   src="_img/screenshot/ugui-win.png"    alt="Screenshot of UGUI running on Windows" />
-                <img class="osx-screenshot-lg"   src="_img/screenshot/ugui-osx.png"    alt="Screenshot of UGUI running on OSX"     />
-                <img class="linux-screenshot-lg" src="_img/screenshot/ugui-ubuntu.png" alt="Screenshot of UGUI running on Ubuntu"  />
+                <a href="_img/screenshot/ugui-win.png"    target="_blank">
+                  <img class="win-screenshot-lg"   src="_img/screenshot/ugui-win.png"    alt="Screenshot of UGUI running on Windows" />
+                </a>
+                <a href="_img/screenshot/ugui-osx.png"    target="_blank">
+                  <img class="osx-screenshot-lg"   src="_img/screenshot/ugui-osx.png"    alt="Screenshot of UGUI running on OSX"     />
+                </a>
+                <a href="_img/screenshot/ugui-ubuntu.png" target="_blank">
+                  <img class="linux-screenshot-lg" src="_img/screenshot/ugui-ubuntu.png" alt="Screenshot of UGUI running on Ubuntu"  />
+                </a>
                 <div class="screenshots-text">
-                    <h3 class="win-screenshot-lg">Windows Iorem</h3>
-                    <p class="win-screenshot-lg">Windows lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                    <h3 class="osx-screenshot-lg">OSX Iorem</h3>
-                    <p class="osx-screenshot-lg">OSX ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                    <h3 class="linux-screenshot-lg">Linux Iorem</h3>
-                    <p class="linux-screenshot-lg">Linux ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <h3 class="win-screenshot-lg">UGUI Running on Windows</h3>
+                    <!-- <p class="win-screenshot-lg">Windows lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> -->
+                    <h3 class="osx-screenshot-lg">UGUI Running on OSX</h3>
+                    <!-- <p class="osx-screenshot-lg">OSX ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> -->
+                    <h3 class="linux-screenshot-lg">UGUI Running on Linux</h3>
+                    <!-- <p class="linux-screenshot-lg">Linux ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> -->
                 </div>
             </div>
         </div>
@@ -161,7 +167,7 @@
             <a href="http://reddit.com/r/UGUI" title="Subreddit">Community Forum</a>
             <a href="http://gitter.im/UniversalGUI/UGUI" title="Gitter">Chatroom</a>
 <!--        <a href="#">About</a> -->
-            <p>&copy; Copyright Jared Wilcurt 2015</p>
+            <p>&copy; Copyright Jared Wilcurt 2014-2016</p>
         </footer>
     </div>
     <script src="_scripts/shannon.js"></script>
