Fix Lin Tut page

--- a/tutorials/getting-started-lin.html
+++ b/tutorials/getting-started-lin.html
@@ -38,9 +38,7 @@
     <link rel="fluid-icon"                   href="/_img/meta/fluid.png"      type="image/png"                 />
     <link rel="icon"                         href="/favicon.ico"              type="image/x-icon"              />
     <link rel="shortcut icon"                href="/favicon.ico"              type="image/ico"                 />
-    <link rel="stylesheet"                   href="/_style/ven.normalize.css" type="text/css"                  />
-    <link rel="stylesheet"                   href="/_style/api.css"           type="text/css"                  />
-    <link rel="stylesheet"                   href="/_style/ven.zenburn.css"   type="text/css"                  />
+    <link rel="stylesheet"                   href="/_style/style.css"         type="text/css"                  />
     <style>
         #wrapper {
             max-width: 1000px;
@@ -63,7 +61,7 @@
         });
     </script>
 </head>
-<body>
+<body class="api">
     <div id="wrapper" class="wrapper">
 
       <h1><a id="node"></a>Install Node.js with Ubuntu Package Manager</h1>
