--- a/404.dev.html
+++ b/404.dev.html
@@ -41,7 +41,7 @@
     <link rel="shortcut icon"                href="/favicon.ico"           type="image/ico"                  />
     <link rel="stylesheet"                   href="/_style/style.css"      type="text/css"                   />
   </head>
-  <body class="d">
+  <body class="dawn">
     <table class="t">
       <tr>
         <td>
