--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
     <script src="_scripts/crossbrowser.min.js"></script>
   </head>
   <body class="homepage">
-    <nav>
+
+    <header>
+      <nav>
         <img src="_img/meta/apl-57.png" alt="UGUI Icon" />
         <a href="/index.html" title="UGUI.io">Home</a>
 <!--    <a href="#">Templates</a> -->
@@ -72,10 +74,11 @@
 <!--    <a href="/spotlight" title="Showcase of apps made with UGUI">Showcase</a> -->
         <a href="/source" title="The most well commented code in the history of ever!">Annotated Source</a>
         <div class="nav-right">
-            <a href="/download" class="start" title="Download Archive">Get UGUI</a>
-            <a href="http://github.com/UniversalGUI/UGUI" title="View Source Code for UGUI on GitHub">GitHub</a>
+          <a href="/download" class="start" title="Download Archive">Get UGUI</a>
+          <a href="http://github.com/UniversalGUI/UGUI" title="View Source Code for UGUI on GitHub">GitHub</a>
         </div>
-    </nav>
+      </nav>
+    </header>
 
     <section id="jumbotron">
       <div class="tv">
@@ -91,86 +94,91 @@
         <p>Watch <a href="tutorials/getting-started.htm">"Getting Started with UGUI"</a>.</p>
       </div>
     </section>
+
     <section id="features">
-        <figure>
-            <img src="_img/fast.svg" alt="Icon of a speedometer with the dial pointed to the right to indicate high speeds." />
-            <figcaption>Fast</figcaption>
-        </figure>
-        <figure>
-            <img src="_img/free.svg" alt="Icon of dollar sign with a slash through it." />
-            <figcaption>Free</figcaption>
-        </figure>
-         <figure>
-            <img src="_img/opensource.svg" alt="Icon containing the symbol for open source software." />
-            <figcaption>Open Source</figcaption>
-        </figure>
-         <figure>
-            <img src="_img/crossplatform.svg" alt="Icon containing logos for Windows, Apple, and Ubuntu." />
-            <figcaption>Cross-Platform</figcaption>
-        </figure>
+      <figure>
+        <img src="_img/fast.svg" alt="Icon of a speedometer with the dial pointed to the right to indicate high speeds." />
+        <figcaption>Fast</figcaption>
+      </figure>
+      <figure>
+        <img src="_img/free.svg" alt="Icon of dollar sign with a slash through it." />
+        <figcaption>Free</figcaption>
+      </figure>
+      <figure>
+        <img src="_img/opensource.svg" alt="Icon containing the symbol for open source software." />
+        <figcaption>Open Source</figcaption>
+      </figure>
+      <figure>
+        <img src="_img/crossplatform.svg" alt="Icon containing logos for Windows, Apple, and Ubuntu." />
+        <figcaption>Cross-Platform</figcaption>
+      </figure>
     </section>
-    <div class="bottom">
-        <div class="os">
-            <header>
-                <div class="windows tab">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 27.56 24.05"><path d="M21.83 23a.19.19 0 0 0 .07-.07l2.51-8.53a.15.15 0 0 0 0-.15l-.21-.16a.16.16 0 0 0-.14 0c-.64.21-1.27.38-1.85.52a15.22 15.22 0 0 1-1.62.3 10 10 0 0 1-2.68 0 8 8 0 0 1-2.12-.6 12 12 0 0 1-1.81-1 .26.26 0 0 0-.37.1l-2.61 8.67a.18.18 0 0 0 .09.21 11.84 11.84 0 0 0 1.92 1 9.6 9.6 0 0 0 1.13.4 9.42 9.42 0 0 0 1.25.26 9.82 9.82 0 0 0 1.38.09 11 11 0 0 0 1.48 0 13.06 13.06 0 0 0 1.75-.39 16.65 16.65 0 0 0 1.83-.65zM10.05 21.31a.13.13 0 0 0 .06-.07l2.55-8.52a1.23 1.23 0 0 0 .09-.36 9 9 0 0 0-3.92-1.62 8.17 8.17 0 0 0-1.29-.1 10.36 10.36 0 0 0-1.44.14 14.07 14.07 0 0 0-1.63.38c-.57.17-1.17.4-1.83.64l-2.64 8.81v.11l.21.14a.14.14 0 0 0 .1 0 18.42 18.42 0 0 1 2.62-.8 9.93 9.93 0 0 1 2.16-.24 7.59 7.59 0 0 1 1.6.18 7.73 7.73 0 0 1 1.4.45 13.44 13.44 0 0 1 1.71.94.14.14 0 0 0 .1 0zM27.12 3.25q-.9.36-1.83.63a13.71 13.71 0 0 1-1.63.37 10.06 10.06 0 0 1-1.37.13 8.3 8.3 0 0 1-1.29-.08 7.76 7.76 0 0 1-2.14-.62 13.27 13.27 0 0 1-1.81-1h-.05v-.05h-.15a.51.51 0 0 0-.16.15l-2.63 8.78c-.05.17.09.24.72.58a9.56 9.56 0 0 0 3 1.22 9.08 9.08 0 0 0 1.83.2 10.63 10.63 0 0 0 2.08-.19 12.76 12.76 0 0 0 3.2-1 .19.19 0 0 0 .11-.07l2.59-8.74a.4.4 0 0 0-.47-.31zM3 10a.14.14 0 0 0 0 .1.42.42 0 0 0 .38.17 11.79 11.79 0 0 1 5.62-1.02 7.64 7.64 0 0 1 2 .55 12.3 12.3 0 0 1 1.76.93h.09l.15-.06a.15.15 0 0 0 .11-.11l2.5-8.41a.68.68 0 0 0 .06-.41 14.49 14.49 0 0 0-1.29-.74 7.73 7.73 0 0 0-3.54-1 10.31 10.31 0 0 0-2.33.24 17.42 17.42 0 0 0-2.86.89l-.16.52z" transform="translate(-.01)"/></svg>
-                </div>
-                <div class="osx tab">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 22.34 27.42"><path d="M18.66 14.57a6.2 6.2 0 0 1 3-5.22 6.41 6.41 0 0 0-5-2.72c-2.13-.22-4.17 1.26-5.25 1.26s-2.75-1.23-4.52-1.19a6.71 6.71 0 0 0-5.67 3.44c-2.42 4.19-.62 10.41 1.78 13.81 1.15 1.66 2.52 3.54 4.33 3.47s2.39-1.12 4.49-1.12 2.69 1.12 4.53 1.09 3-1.7 4.2-3.37a15.08 15.08 0 0 0 1.9-3.9 6.06 6.06 0 0 1-3.75-5.55" transform="translate(-.07)"/><path d="M11.21 6.32a6 6 0 0 1 5.45-6.32c.09 2.77-1.66 6.42-5.45 6.32z" transform="translate(-.07)"/></svg>
-                </div>
-                <div class="linux tab">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 27.42 27.42"><path d="M14.5.79a13.71 13.71 0 1 0 13.71 13.71 13.71 13.71 0 0 0-13.71-13.71zm3.08 4.72a1.83 1.83 0 1 1 .67 2.49 1.83 1.83 0 0 1-.67-2.49zm-12.4 10.82a1.83 1.83 0 1 1 1.82-1.83 1.83 1.83 0 0 1-1.82 1.83zm1.62.17a2.57 2.57 0 0 0 0-4 8 8 0 0 1 3.29-4.62l1.34 2.24a5.35 5.35 0 0 0 0 8.75l-1.34 2.24a8 8 0 0 1-3.29-4.61zm13.28 7.67a1.83 1.83 0 1 1 .67-2.5 1.83 1.83 0 0 1-.67 2.49zm0-4a2.57 2.57 0 0 0-3.45 2 8 8 0 0 1-5.63-.54l1.27-2.28a5.35 5.35 0 0 0 7.56-4.35h2.61a7.93 7.93 0 0 1-2.37 5.17zm-.25-6.17a5.35 5.35 0 0 0-7.58-4.38l-1.25-2.25a8 8 0 0 1 5.65-.53 2.57 2.57 0 0 0 3.45 2 7.93 7.93 0 0 1 2.34 5.16z" transform="translate(-.79 -.79)"/></svg>
-                </div>
-            </header>
-            <div class="lower-os" id="windows">
-                <img id="win-thumb" src="_img/screenshot/ugui-win-th.png" alt="Thumbnail of a screenshot of UGUI running on Windows" />
-            </div>
-            <div class="lower-os" id="osx">
-                <img id="osx-thumb" src="_img/screenshot/ugui-osx-th.png" alt="Thumbnail of a screenshot of UGUI running on OSX" />
-            </div>
-            <div class="lower-os" id="linux">
-                <img id="lin-thumb" src="_img/screenshot/ugui-ubuntu-th.png" alt="Thumbnail of a screenshot of UGUI running on Ubuntu" />
-            </div>
+
+    <section id="screenshots" class="bottom">
+      <div class="os">
+        <header>
+          <div class="windows tab">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 27.56 24.05"><path d="M21.83 23a.19.19 0 0 0 .07-.07l2.51-8.53a.15.15 0 0 0 0-.15l-.21-.16a.16.16 0 0 0-.14 0c-.64.21-1.27.38-1.85.52a15.22 15.22 0 0 1-1.62.3 10 10 0 0 1-2.68 0 8 8 0 0 1-2.12-.6 12 12 0 0 1-1.81-1 .26.26 0 0 0-.37.1l-2.61 8.67a.18.18 0 0 0 .09.21 11.84 11.84 0 0 0 1.92 1 9.6 9.6 0 0 0 1.13.4 9.42 9.42 0 0 0 1.25.26 9.82 9.82 0 0 0 1.38.09 11 11 0 0 0 1.48 0 13.06 13.06 0 0 0 1.75-.39 16.65 16.65 0 0 0 1.83-.65zM10.05 21.31a.13.13 0 0 0 .06-.07l2.55-8.52a1.23 1.23 0 0 0 .09-.36 9 9 0 0 0-3.92-1.62 8.17 8.17 0 0 0-1.29-.1 10.36 10.36 0 0 0-1.44.14 14.07 14.07 0 0 0-1.63.38c-.57.17-1.17.4-1.83.64l-2.64 8.81v.11l.21.14a.14.14 0 0 0 .1 0 18.42 18.42 0 0 1 2.62-.8 9.93 9.93 0 0 1 2.16-.24 7.59 7.59 0 0 1 1.6.18 7.73 7.73 0 0 1 1.4.45 13.44 13.44 0 0 1 1.71.94.14.14 0 0 0 .1 0zM27.12 3.25q-.9.36-1.83.63a13.71 13.71 0 0 1-1.63.37 10.06 10.06 0 0 1-1.37.13 8.3 8.3 0 0 1-1.29-.08 7.76 7.76 0 0 1-2.14-.62 13.27 13.27 0 0 1-1.81-1h-.05v-.05h-.15a.51.51 0 0 0-.16.15l-2.63 8.78c-.05.17.09.24.72.58a9.56 9.56 0 0 0 3 1.22 9.08 9.08 0 0 0 1.83.2 10.63 10.63 0 0 0 2.08-.19 12.76 12.76 0 0 0 3.2-1 .19.19 0 0 0 .11-.07l2.59-8.74a.4.4 0 0 0-.47-.31zM3 10a.14.14 0 0 0 0 .1.42.42 0 0 0 .38.17 11.79 11.79 0 0 1 5.62-1.02 7.64 7.64 0 0 1 2 .55 12.3 12.3 0 0 1 1.76.93h.09l.15-.06a.15.15 0 0 0 .11-.11l2.5-8.41a.68.68 0 0 0 .06-.41 14.49 14.49 0 0 0-1.29-.74 7.73 7.73 0 0 0-3.54-1 10.31 10.31 0 0 0-2.33.24 17.42 17.42 0 0 0-2.86.89l-.16.52z" transform="translate(-.01)"/></svg>
+          </div>
+          <div class="osx tab">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 22.34 27.42"><path d="M18.66 14.57a6.2 6.2 0 0 1 3-5.22 6.41 6.41 0 0 0-5-2.72c-2.13-.22-4.17 1.26-5.25 1.26s-2.75-1.23-4.52-1.19a6.71 6.71 0 0 0-5.67 3.44c-2.42 4.19-.62 10.41 1.78 13.81 1.15 1.66 2.52 3.54 4.33 3.47s2.39-1.12 4.49-1.12 2.69 1.12 4.53 1.09 3-1.7 4.2-3.37a15.08 15.08 0 0 0 1.9-3.9 6.06 6.06 0 0 1-3.75-5.55" transform="translate(-.07)"/><path d="M11.21 6.32a6 6 0 0 1 5.45-6.32c.09 2.77-1.66 6.42-5.45 6.32z" transform="translate(-.07)"/></svg>
+          </div>
+          <div class="linux tab">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 27.42 27.42"><path d="M14.5.79a13.71 13.71 0 1 0 13.71 13.71 13.71 13.71 0 0 0-13.71-13.71zm3.08 4.72a1.83 1.83 0 1 1 .67 2.49 1.83 1.83 0 0 1-.67-2.49zm-12.4 10.82a1.83 1.83 0 1 1 1.82-1.83 1.83 1.83 0 0 1-1.82 1.83zm1.62.17a2.57 2.57 0 0 0 0-4 8 8 0 0 1 3.29-4.62l1.34 2.24a5.35 5.35 0 0 0 0 8.75l-1.34 2.24a8 8 0 0 1-3.29-4.61zm13.28 7.67a1.83 1.83 0 1 1 .67-2.5 1.83 1.83 0 0 1-.67 2.49zm0-4a2.57 2.57 0 0 0-3.45 2 8 8 0 0 1-5.63-.54l1.27-2.28a5.35 5.35 0 0 0 7.56-4.35h2.61a7.93 7.93 0 0 1-2.37 5.17zm-.25-6.17a5.35 5.35 0 0 0-7.58-4.38l-1.25-2.25a8 8 0 0 1 5.65-.53 2.57 2.57 0 0 0 3.45 2 7.93 7.93 0 0 1 2.34 5.16z" transform="translate(-.79 -.79)"/></svg>
+          </div>
+        </header>
+        <div class="lower-os" id="win">
+          <img src="_img/screenshot/ugui-win-th.png" alt="Thumbnail of a screenshot of UGUI running on Windows" />
         </div>
-        <div class="screenshots">
-            <div>
-                <h2>Screenshots</h2>
-                <a href="_img/screenshot/ugui-win.png"    target="_blank">
-                  <img class="win-screenshot-lg"   src="_img/screenshot/ugui-win.png"    alt="Screenshot of UGUI running on Windows" />
-                </a>
-                <a href="_img/screenshot/ugui-osx.png"    target="_blank">
-                  <img class="osx-screenshot-lg"   src="_img/screenshot/ugui-osx.png"    alt="Screenshot of UGUI running on OSX"     />
-                </a>
-                <a href="_img/screenshot/ugui-ubuntu.png" target="_blank">
-                  <img class="linux-screenshot-lg" src="_img/screenshot/ugui-ubuntu.png" alt="Screenshot of UGUI running on Ubuntu"  />
-                </a>
-                <div class="screenshots-text">
-                    <h3 class="win-screenshot-lg">UGUI Running on Windows</h3>
-                    <!-- <p class="win-screenshot-lg">Windows lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> -->
-                    <h3 class="osx-screenshot-lg">UGUI Running on OSX</h3>
-                    <!-- <p class="osx-screenshot-lg">OSX ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> -->
-                    <h3 class="linux-screenshot-lg">UGUI Running on Linux</h3>
-                    <!-- <p class="linux-screenshot-lg">Linux ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> -->
-                </div>
-            </div>
+        <div class="lower-os" id="osx">
+          <img src="_img/screenshot/ugui-osx-th.png" alt="Thumbnail of a screenshot of UGUI running on OSX" />
         </div>
-        <div class="get-started">
-            <a href="tutorials/getting-started.htm" class="start">Get Started!</a>
+        <div class="lower-os" id="ubuntu">
+          <img src="_img/screenshot/ugui-ubuntu-th.png" alt="Thumbnail of a screenshot of UGUI running on Ubuntu" />
         </div>
-        <footer>
-            <a href="/index.html">Home</a>
- <!--       <a href="#">Templates</a> -->
-            <a href="/api">API Documentation</a>
-            <a href="/tutorials/index.html">Tutorials</a>
-<!--        <a href="#">Showcase</a> -->
-            <a href="/source" title="View the fully commented source code for the UGUI library">Annotated Source</a>
-            <a href="http://reddit.com/r/UGUI" title="Subreddit">Community Forum</a>
-            <a href="http://gitter.im/UniversalGUI/UGUI" title="Gitter">Chatroom</a>
-<!--        <a href="#">About</a> -->
-            <p>&copy; Copyright Jared Wilcurt 2014-2016</p>
-        </footer>
-    </div>
+      </div>
+      <div class="screenshots">
+        <div>
+          <h2>Screenshots</h2>
+          <a href="_img/screenshot/ugui-win.png"    target="_blank">
+            <img class="win-screenshot-lg"   src="_img/screenshot/ugui-win.png"    alt="Screenshot of UGUI running on Windows" />
+          </a>
+          <a href="_img/screenshot/ugui-osx.png"    target="_blank">
+            <img class="osx-screenshot-lg"   src="_img/screenshot/ugui-osx.png"    alt="Screenshot of UGUI running on OSX"     />
+          </a>
+          <a href="_img/screenshot/ugui-ubuntu.png" target="_blank">
+            <img class="linux-screenshot-lg" src="_img/screenshot/ugui-ubuntu.png" alt="Screenshot of UGUI running on Ubuntu"  />
+          </a>
+          <div class="screenshots-text">
+            <h3 class="win-screenshot-lg">UGUI Running on Windows</h3>
+            <!-- <p class="win-screenshot-lg">Windows lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> -->
+            <h3 class="osx-screenshot-lg">UGUI Running on OSX</h3>
+            <!-- <p class="osx-screenshot-lg">OSX ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> -->
+            <h3 class="linux-screenshot-lg">UGUI Running on Linux</h3>
+            <!-- <p class="linux-screenshot-lg">Linux ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> -->
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="get-started">
+      <a href="tutorials/getting-started.htm" class="start">Get Started!</a>
+    </section>
+
+    <footer>
+      <a href="/index.html">Home</a>
+<!--  <a href="#">Templates</a> -->
+      <a href="/api">API Documentation</a>
+      <a href="/tutorials/index.html">Tutorials</a>
+<!--  <a href="#">Showcase</a> -->
+      <a href="/source" title="View the fully commented source code for the UGUI library">Annotated Source</a>
+      <a href="http://reddit.com/r/UGUI" title="Subreddit">Community Forum</a>
+      <a href="http://gitter.im/UniversalGUI/UGUI" title="Gitter">Chatroom</a>
+<!--  <a href="#">About</a> -->
+      <p>&copy; Copyright Jared Wilcurt 2014-2016</p>
+    </footer>
+
     <script src="_scripts/shannon.js"></script>
-  <script>!function(U,g,u,i,j,s){U.GoogleAnalyticsObject=u;U[u]||(U[u]=function(){(U[u].q=U[u].q||[]).push(arguments)});U[u].u=+new Date;j=g.createElement(i);s=g.getElementsByTagName(i)[0];j.src='//www.google-analytics.com/analytics.js';s.parentNode.insertBefore(j,s)}(window,document,'ga','script');ga('create','UA-67786036-1','auto');ga('send','pageview');</script>
+    <script>!function(U,g,u,i,j,s){U.GoogleAnalyticsObject=u;U[u]||(U[u]=function(){(U[u].q=U[u].q||[]).push(arguments)});U[u].u=+new Date;j=g.createElement(i);s=g.getElementsByTagName(i)[0];j.src='//www.google-analytics.com/analytics.js';s.parentNode.insertBefore(j,s)}(window,document,'ga','script');ga('create','UA-67786036-1','auto');ga('send','pageview');</script>
   </body>
 </html>
