Fixed screenshots area

--- a/index.html
+++ b/index.html
@@ -132,22 +132,22 @@
       <div class="screenshots">
         <div>
           <h2>Screenshots</h2>
-          <a href="_img/screenshot/ugui-win.png"    target="_blank">
-            <img class="win-screenshot-lg"   src="_img/screenshot/ugui-win.png"    alt="Screenshot of UGUI running on Windows" />
-          </a>
-          <a href="_img/screenshot/ugui-osx.png"    target="_blank">
-            <img class="osx-screenshot-lg"   src="_img/screenshot/ugui-osx.png"    alt="Screenshot of UGUI running on OSX"     />
-          </a>
-          <a href="_img/screenshot/ugui-ubuntu.png" target="_blank">
-            <img class="linux-screenshot-lg" src="_img/screenshot/ugui-ubuntu.png" alt="Screenshot of UGUI running on Ubuntu"  />
-          </a>
+          <span class="ugui-win"    ><a href="_img/screenshot/ugui-win.png"    target="_blank">
+            <img src="_img/screenshot/ugui-win.png"    alt="Screenshot of UGUI running on Windows" />
+          </a></span>
+          <span class="ugui-osx"    ><a href="_img/screenshot/ugui-osx.png"    target="_blank">
+            <img src="_img/screenshot/ugui-osx.png"    alt="Screenshot of UGUI running on OSX"     />
+          </a></span>
+          <span class="ugui-ubuntu" ><a href="_img/screenshot/ugui-ubuntu.png" target="_blank">
+            <img src="_img/screenshot/ugui-ubuntu.png" alt="Screenshot of UGUI running on Ubuntu"  />
+          </a></span>
           <div class="screenshots-text">
-            <h3 class="win-screenshot-lg">UGUI Running on Windows</h3>
-            <!-- <p class="win-screenshot-lg">Windows lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> -->
-            <h3 class="osx-screenshot-lg">UGUI Running on OSX</h3>
-            <!-- <p class="osx-screenshot-lg">OSX ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> -->
-            <h3 class="linux-screenshot-lg">UGUI Running on Linux</h3>
-            <!-- <p class="linux-screenshot-lg">Linux ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> -->
+            <h3 class="ugui-win">UGUI Running on Windows</h3>
+            <p class="ugui-win">UGUI is cross-platform due to using NW.js as it's core. If you are using NW.js 0.12.3 you have support for XP and above. NW.js 0.13.0 and beyond supports Vista and above.</p>
+            <h3 class="ugui-osx">UGUI Running on OSX</h3>
+            <p class="ugui-osx">Your UGUI App will run on OSX 10.7 and above. There are even <a href="https://github.com/nwjs/nw.js/wiki/Mac-App-Store-(MAS)-Submission-Guideline" target="_blank">tutorials</a> on how to make your app safe to upload to the Mac App Store.</p>
+            <h3 class="ugui-ubuntu">UGUI Running on Linux</h3>
+            <p class="ugui-ubuntu">UGUI officially supports Ubuntu 12 LTS and Ubuntu 14 LTS. Though it will likely run fine on Ubuntu 10 without any effort. Other Linux distros, especially those based on Debian may also work, but are not officially supported.</p>
           </div>
         </div>
       </div>
