Fixed tutorial link

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           Download UGUI <span class="version">v1.0.0</span>
         </a>
 
-        <p>Watch <a href="tutorials/getting-started.htm">"Getting Started with UGUI"</a>.</p>
+        <p>Watch <a href="tutorials/getting-started.html">"Getting Started with UGUI"</a>.</p>
       </div>
     </section>
 
@@ -154,7 +154,7 @@
     </section>
 
     <section class="get-started">
-      <a href="tutorials/getting-started.htm" class="start">Get Started!</a>
+      <a href="tutorials/getting-started.html" class="start">Get Started!</a>
     </section>
 
     <footer>
