--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <link rel="shortcut icon"                href="favicon.ico"           type="image/ico"                  />
     <link rel="stylesheet"                   href="_style/style.css"      type="text/css"                   />
 
-    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.3.min.js"></script>
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.3.min.js"></script>
     <script>window.jQuery || document.write('<script src="/_scripts/jquery-2.1.3.min.js"><\/script>');</script>
     <script>
         $(document).ready(function(){
