--- a/tutorials/getting-started-lin.html
+++ b/tutorials/getting-started-lin.html
@@ -50,7 +50,7 @@
           font-size: 2.5em;
         }
     </style>
-    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.3.min.js"></script>
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.3.min.js"></script>
     <script>window.jQuery || document.write('<script src="/_scripts/jquery-2.1.3.min.js"><\/script>')</script>
     <script>
         $(document).ready(function(){
