--- a/download/index.html
+++ b/download/index.html
@@ -40,7 +40,7 @@
     <link rel="icon"                         href="../favicon.ico"           type="image/x-icon"               />
     <link rel="shortcut icon"                href="../favicon.ico"           type="image/ico"                  />
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" />
-    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.3.min.js"></script>
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.3.min.js"></script>
     <script>window.jQuery || document.write('<script src="/_scripts/jquery-2.1.3.min.js"><\/script>')</script>
 
     <script>
